--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,86 @@
-altair==5.5.0
-argcomplete==1.10.3
-attrs==25.3.0
-beautifulsoup4==4.8.2
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.4.26
-chardet==3.0.4
-charset-normalizer==3.4.2
-click==8.2.1
+streamlit==1.45.1
+pandas==2.2.2
+PyPDF2==3.0.1
+python-docx==1.1.2
+scikit-learn==1.4.2
+sentence-transformers==2.6.1
+keybert==0.7.0
+numpy==1.26.4
+nltk==3.8.1
+PyMuPDF==1.22.3
+spacy==3.7.4
+altair==5.2.0
+argcomplete==1.10.0
+attrs==23.2.0
+beautifulsoup4==4.8.0       # ✅ Compatible with textract
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+chardet==3.0.4              # ✅ Compatible with textract
+charset-normalizer==3.3.2
+click==8.1.7
 compressed-rtf==1.0.7
-coverage==7.8.2
-docx2txt==0.9
+coverage==7.4.4
+docx2txt==0.8               # ✅ Compatible with textract
 ebcdic==1.1.1
-et_xmlfile==2.0.0
-extract-msg==0.28.7
-filelock==3.18.0
+et_xmlfile==1.1.0
+extract-msg==0.23.1         # ✅ Compatible with textract
+filelock==3.13.4
 fpdf==1.7.2
-fsspec==2025.5.1
-gitdb==4.0.12
-GitPython==3.1.44
-h11==0.16.0
+fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
 hf-xet==1.1.3
-huggingface-hub==0.32.4
-idna==3.10
+huggingface-hub==0.21.4
+idna==3.6
 IMAPClient==2.1.0
-iniconfig==2.1.0
-Jinja2==3.1.6
-joblib==1.5.1
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-lxml==5.4.0
-MarkupSafe==3.0.2
+iniconfig==2.0.0
+Jinja2==3.1.3
+joblib==1.4.2
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+lxml==5.1.0
+MarkupSafe==2.1.5
 mpmath==1.3.0
 narwhals==1.42.0
-networkx==3.5
-nltk==3.7
-numpy==2.3.0
-olefile==0.47
-openpyxl==3.1.5
+networkx==3.3
+olefile==0.46               # ✅ Compatible with textract
+openpyxl==3.1.2
 outcome==1.3.0.post0
-packaging==24.2
-pandas==2.3.0
-pdfminer.six==20191110
-pillow==11.2.1
-pluggy==1.6.0
-protobuf==6.31.1
-pyarrow==20.0.0
-pycryptodome==3.23.0
-pydeck==0.9.1
-Pygments==2.19.1
-PyPDF2==3.0.1
+packaging==24.0
+pdfminer.six==20181108      # ✅ Compatible with textract
+pillow==10.2.0
+pluggy==1.4.0
+protobuf==4.25.3
+pyarrow==15.0.2
+pycryptodome==3.20.0
+pydeck==0.8.1b0
+Pygments==2.17.2
 PySocks==1.7.1
-pytest==8.4.0
-pytest-cov==6.1.1
+pytest==8.1.1
+pytest-cov==4.1.0
 python-dateutil==2.9.0.post0
-python-docx==1.1.2
 python-pptx==0.6.23
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-rpds-py==0.25.1
-safetensors==0.5.3
-scikit-learn==1.7.0
-scipy==1.15.3
-selenium==4.33.0
-sentence-transformers==4.1.0
-setuptools==80.9.0
-six==1.12.0
-smmap==5.0.2
+pytz==2024.1
+PyYAML==6.0.1
+referencing==0.34.0
+regex==2024.4.28
+requests==2.31.0
+rpds-py==0.18.0
+safetensors==0.4.2
+selenium==4.20.0
+six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
-soupsieve==2.7
+soupsieve==2.5
 SpeechRecognition==3.8.1
-streamlit==1.45.1
-sympy==1.14.0
-tenacity==9.1.2
-textract==1.6.5
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-toml==0.10.2
-torch==2.7.1
-tornado==6.5.1
-tqdm==4.67.1
-transformers==4.52.4
-trio==0.30.0
-trio-websocket==0.12.2
-typing_extensions==4.13.2
-tzdata==2025.2
-tzlocal==5.3.1
-urllib3==2.4.0
-websocket-client==1.8.0
-wsproto==1.2.0
-xlrd==1.2.0
-XlsxWriter==3.2.3
+sympy==1.1
+sentence-transformers
+streamlit
+nltk
+sentence-transformers
+PyMuPDF
+scikit-learn
+
